--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "slider-block",
-	"version": "0.1.2",
+	"version": "0.0.1",
 	"description": "A slider carousel block for WordPress with SwiperJS.",
-	"author": "Damon Cook",
-	"license": "GPL-2.0-or-later",
+	"author": "Adrian Kotlinski",
+	"license": "UNLICENSED",
 	"scripts": {
 		"build": "wp-scripts build",
 		"format": "wp-scripts format",
